# qualityfoundry

./: .encryption_key  .env.example  .gitignore  =2.8  LICENSE  README.md  __main__.py  check_db.py  check_routes.py  diagnostic_db.py  docker-compose.yml  pyproject.toml  pytest_results.txt  pytest_results2.txt  seed_admin.py
backend/: .encryption_key  alembic.ini  cleanup_test_data.py  debug_generate.py  pyproject.toml  setup.py
backend/alembic/versions/: add_performance_indexes.py
backend/app/: .encryption_key  debug_import.py  debug_test_file.py  seed_data.py
backend/app/qualityfoundry/: cli.py  logging_config.py  main.py
backend/app/qualityfoundry/api/: runs.py
backend/app/qualityfoundry/core/: __init__.py  config.py  db.py  tenant_context.py
backend/app/qualityfoundry/database/: __init__.py  ai_config_models.py  audit_log_models.py  config.py  models.py  run_event_models.py  system_config_models.py  tenant_models.py  token_models.py  user_models.py
backend/app/qualityfoundry/execution/: container_sandbox.py  sandbox.py
backend/app/qualityfoundry/governance/: __init__.py  gate.py  policy_config.yaml  policy_loader.py  repro.py
backend/app/qualityfoundry/middleware/: __init__.py  security.py
backend/app/qualityfoundry/models/: ai_config_schemas.py  approval_schemas.py  common_schemas.py  compile_schemas.py  db.py  environment_schemas.py  execution_schemas.py  observer_schemas.py  requirement_schemas.py  run_status.py  scenario_schemas.py  schemas.py  tenant_schemas.py  testcase_schemas.py  user_schemas.py
backend/app/qualityfoundry/protocol/: __init__.py
backend/app/qualityfoundry/schemas/: __init__.py  evidence.v1.schema.json
backend/app/uploads/: f386f6d6-193c-4771-9e8b-826f6a426b2b.docx
backend/migrations/: env.py
backend/migrations/versions/: 1697c6ae1fca_add_audit_logs_table.py  4d080a35a5a2_add_run_events_table_for_sse.py  a1ac041701e9_add_execution_created_by_user_id.py  a8b9c0d1e2f3_add_user_tokens_table.py  add_seq_id_columns.py  af9a5ed80930_add_ai_execution_logs.py  b2c3d4e5f6a7_add_tenant_tables.py  db95cb16bdec_add_system_config_table.py  e005e747fc14_final_complete_schema.py
backend/scripts/: verify_rbac.sh
backend/tests/: conftest.py  test_ai_review_basic.py  test_ai_review_policy_integration.py  test_api_contract_dashboard_summary.py  test_api_contract_playwright.py  test_api_contract_run_detail.py  test_api_contract_run_detail_artifact_audit.py  test_approvals_api.py  test_artifact_audit.py  test_artifact_path_safety.py  test_audit_log.py  test_budget_short_circuit.py  test_compile_warnings.py  test_compiler.py  test_container_policy_extension.py  test_container_sandbox.py  test_container_sandbox_unit.py  test_cost_governance_execution.py  test_cost_governance_orchestrator.py  test_dashboard_api.py  test_e2e_compile_execute.py  test_e2e_workflow.py  test_environments_api.py  test_evidence_ai_review.py  test_executions_api.py  test_executor_actions.py  test_gate_ai_review.py  test_gate_decision.py  test_integration.py  test_junit_parser.py  test_jwt_auth.py  test_legacy_runs_readonly.py  test_log_fetcher.py  test_login_rules.py  test_mcp_rate_limiter.py  test_mcp_server_smoke.py  test_mcp_write_security.py  test_observer_diagnostics.py  test_orchestrator_service.py  test_policy_loader.py  (+27 more)
infra/: README.md
(+205 files in other folders)
