[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualityfoundry"
version = "0.1.0"
description = "QualityFoundry: Python-first testing tool prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "playwright>=1.45",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "cryptography>=42.0",
  "email-validator>=2.1",
  "python-multipart>=0.0.9",
  "orjson>=3.10",
  "jsonschema>=4.21",
]

[project.scripts]
qf = "qualityfoundry.cli:app"

[tool.setuptools]
package-dir = {"" = "backend/app"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["backend/app"]
