[project]
name = "qualityfoundry"
version = "0.1.0"
description = "QualityFoundry — From Specs to Stable Tests."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "QualityFoundry Contributors"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlmodel>=0.0.16",
  "typer>=0.12",
  "rich>=13.7",
  "python-multipart>=0.0.9",
  "orjson>=3.10",
  "playwright>=1.45",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "langgraph>=0.2.0",
  "cryptography>=42.0",
  "email-validator>=2.1",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.8",
]

[project.scripts]
qf = "qualityfoundry.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures"]
markers = [
    "smoke: marks tests as smoke tests (fast, critical path)",
    "smoke_fast: smoke tests with no external dependencies (pure mock, always pass in CI)",
    "smoke_e2e: smoke tests requiring external tools (pytest subprocess, browser, etc.)",
]
